CMakeSettings.json: Add 1.73 to Boost_ADDITIONAL_VERSIONS [ci skip]

--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -20,7 +20,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -45,10 +45,10 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
-        { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "OFF" },
         { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "OFF" },
@@ -70,7 +70,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -95,7 +95,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -119,7 +119,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -143,7 +143,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -167,7 +167,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -191,7 +191,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -215,7 +215,7 @@
       "ctestCommandArgs": "",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
@@ -283,7 +283,7 @@
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
@@ -311,7 +311,7 @@
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
@@ -338,7 +338,7 @@
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
@@ -365,7 +365,7 @@
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
         { "name": "Boost_DEBUG", "value": "ON" },
-        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.72;1.71" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
