--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -6,17 +6,17 @@
   "environments": [
     { "BuildDir": "${workspaceRoot}\\_build" },
     { "InstallDir": "${workspaceRoot}\\_install" },
-    { "name": "DEFAULT_Boost_ADDITIONAL_VERSIONS", "value": "1.73;1.72;1.71" },
-    { "name": "DEFAULT_Boost_COMPILER", "value": "-vc142;-vc141" },
-    { "name": "DEFAULT_Boost_DEBUG", "value": "ON" },
-    { "name": "DEFAULT_GIL_BUILD_EXAMPLES", "value": "ON" },
-    { "name": "DEFAULT_GIL_BUILD_HEADER_TESTS", "value": "OFF" },
-    { "name": "DEFAULT_GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
-    { "name": "DEFAULT_GIL_ENABLE_EXT_IO", "value": "ON" },
-    { "name": "DEFAULT_GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
-    { "name": "DEFAULT_GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
-    { "name": "DEFAULT_GIL_USE_CONAN", "value": "ON" },
-    { "name": "DEFAULT_GIL_USE_CLANG_TIDY", "value": "OFF" }
+    { "DEFAULT_Boost_ADDITIONAL_VERSIONS": "1.73;1.72;1.71" },
+    { "DEFAULT_Boost_COMPILER": "-vc142;-vc141" },
+    { "DEFAULT_Boost_DEBUG": "ON" },
+    { "DEFAULT_GIL_BUILD_EXAMPLES": "ON" },
+    { "DEFAULT_GIL_BUILD_HEADER_TESTS": "OFF" },
+    { "DEFAULT_GIL_ENABLE_EXT_DYNAMIC_IMAGE": "ON" },
+    { "DEFAULT_GIL_ENABLE_EXT_IO": "ON" },
+    { "DEFAULT_GIL_ENABLE_EXT_NUMERIC": "ON" },
+    { "DEFAULT_GIL_ENABLE_EXT_TOOLBOX": "ON" },
+    { "DEFAULT_GIL_USE_CONAN": "ON" },
+    { "DEFAULT_GIL_USE_CLANG_TIDY": "OFF" }
   ],
   "configurations": [
     {
