--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,6 @@ add_subdirectory(legacy)
 add_subdirectory(extension)
 
 # TODO: Split headers tests into core and extensions, see Jamfile-s
-# if(GIL_BUILD_HEADERS_TESTS)
+# if(BOOST_GIL_BUILD_HEADERS_TESTS)
 #   add_subdirectory(headers)
 # endif()
