Fix missing alignment default value in image constructor
Fixes #424 blocking PR #423

--- a/test/core/image/CMakeLists.txt
+++ b/test/core/image/CMakeLists.txt
@@ -6,7 +6,8 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(_name
-  concepts)
+  concepts
+  image)
   set(_test t_core_image_${_name})
   set(_target test_core_image_${_name})
 
