--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -6,6 +6,7 @@
   "environments": [
     { "BuildDir": "${workspaceRoot}\\_build" },
     { "InstallDir": "${workspaceRoot}\\_install" },
+    { "DEFAULT_BUILD_TESTING": "OFF" },
     { "DEFAULT_Boost_ADDITIONAL_VERSIONS": "1.73;1.72;1.71" },
     { "DEFAULT_Boost_COMPILER": "-vc142;-vc141" },
     { "DEFAULT_Boost_DEBUG": "ON" },
@@ -30,6 +31,7 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "${env.DEFAULT_Boost_COMPILER}" },
@@ -55,6 +57,7 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "${env.DEFAULT_Boost_COMPILER}" },
@@ -80,6 +83,7 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_DEBUG", "value": "${env.DEFAULT_Boost_DEBUG}" },
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
@@ -105,6 +109,7 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "${env.DEFAULT_Boost_COMPILER}" },
@@ -129,6 +134,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "${env.DEFAULT_Boost_COMPILER}" },
@@ -153,6 +159,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
@@ -177,6 +184,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
@@ -201,6 +209,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x32" },
         { "name": "Boost_COMPILER", "value": "-vc142" },
@@ -225,6 +234,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_COMPILER", "value": "-vc141" },
@@ -249,6 +259,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "CMAKE_TOOLCHAIN_FILE", "value": "C:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" },
         { "name": "BOOST_GIL_BUILD_EXAMPLES", "value": "${env.DEFAULT_GIL_BUILD_EXAMPLES}" },
         { "name": "BOOST_GIL_BUILD_HEADER_TESTS", "value": "${env.DEFAULT_GIL_BUILD_HEADER_TESTS}" },
@@ -270,6 +281,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "CMAKE_TOOLCHAIN_FILE", "value": "C:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" },
         { "name": "BOOST_GIL_BUILD_EXAMPLES", "value": "${env.DEFAULT_GIL_BUILD_EXAMPLES}" },
         { "name": "BOOST_GIL_BUILD_HEADER_TESTS", "value": "${env.DEFAULT_GIL_BUILD_HEADER_TESTS}" },
@@ -291,6 +303,7 @@
       "cmakeCommandArgs": "",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "CMAKE_TOOLCHAIN_FILE", "value": "C:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" },
         { "name": "BOOST_GIL_BUILD_EXAMPLES", "value": "${env.DEFAULT_GIL_BUILD_EXAMPLES}" },
         { "name": "BOOST_GIL_BUILD_HEADER_TESTS", "value": "${env.DEFAULT_GIL_BUILD_HEADER_TESTS}" },
@@ -317,6 +330,7 @@
       "wslPath": "${defaultWSLPath}",
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_DEBUG", "value": "${env.DEFAULT_Boost_DEBUG}" },
@@ -345,6 +359,7 @@
       "wslPath": "${defaultWSLPath}",
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_DEBUG", "value": "${env.DEFAULT_Boost_DEBUG}" },
@@ -372,6 +387,7 @@
       "wslPath": "${defaultWSLPath}",
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_DEBUG", "value": "${env.DEFAULT_Boost_DEBUG}" },
@@ -399,6 +415,7 @@
       "wslPath": "${defaultWSLPath}",
       "addressSanitizerRuntimeFlags": "detect_leaks=0",
       "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
         { "name": "Boost_ADDITIONAL_VERSIONS", "value": "${env.DEFAULT_Boost_ADDITIONAL_VERSIONS}" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "Boost_DEBUG", "value": "${env.DEFAULT_Boost_DEBUG}" },
