CMake: Fix look-up for TIFF add-in library for C++ (tiffxx)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,10 +168,19 @@ if(BOOST_GIL_ENABLE_EXT_IO)
         PNG::PNG
         TIFF::TIFF)
 
-    if(UNIX)
-      # Typically, Linux packages provide C++ stream interface for TIFF
+    if (TIFF_LIBRARY)
+      set(TIFFXX_NAMES tiffxx)
+      foreach(name ${TIFFXX_NAMES})
+        list(APPEND TIFFXX_NAMES_DEBUG "${name}d")
+      endforeach()
+      find_library(TIFFXX_LIBRARY_RELEASE NAMES ${TIFFXX_NAMES})
+      find_library(TIFFXX_LIBRARY_DEBUG NAMES ${TIFFXX_NAMES_DEBUG})
       find_path(TIFFXX_INCLUDE_DIR NAMES tiffio.hxx)
-      find_library(TIFFXX_LIBRARY NAMES tiffxx)
+      include(SelectLibraryConfigurations)
+      select_library_configurations(TIFFXX)
+      mark_as_advanced(TIFFXX_LIBRARY_RELEASE TIFFXX_LIBRARY_DEBUG)
+      include(FindPackageHandleStandardArgs)
+      find_package_handle_standard_args(TIFFXX REQUIRED_VARS TIFFXX_LIBRARY TIFFXX_INCLUDE_DIR)
       target_include_directories(gil_dependencies INTERFACE ${TIFFXX_INCLUDE_DIR})
       target_link_libraries(gil_dependencies INTERFACE ${TIFFXX_LIBRARY})
     endif()
