Clean up CI and CMake from Boost.Test and Boost.System remains
Follow-up to #459 and #464

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -95,7 +95,7 @@ before_build:
   - cd boost-root
   - cmd /c bootstrap
   - .\b2 headers > NUL
-  - if DEFINED GENERATOR .\b2 address-model=%AM% toolset=%TOOLSET% variant=%VARIANT% cxxstd=%CXXSTD% --with-filesystem --with-test stage
+  - if DEFINED GENERATOR .\b2 address-model=%AM% toolset=%TOOLSET% variant=%VARIANT% cxxstd=%CXXSTD% --with-filesystem stage
 
 build: off
 
