--- a/.ci/azure-pipelines/steps-install-boost.yml
+++ b/.ci/azure-pipelines/steps-install-boost.yml
@@ -26,7 +26,7 @@ steps:
       cd boost-root
       ./bootstrap.sh
       sudo ./b2 headers
-      sudo ./b2 -j4 toolset=${{ parameters.toolset }} variant=${{ parameters.variant }} --with-filesystem --with-system --with-test stage
+      sudo ./b2 -j4 toolset=${{ parameters.toolset }} variant=${{ parameters.variant }} --with-filesystem stage
       ls stage/lib
     displayName: 'Install Boost on Unix'
     condition: ne(variables['Agent.OS'], 'Windows_NT')
@@ -35,7 +35,7 @@ steps:
       cd boost-root
       call .\bootstrap.bat
       .\b2 headers
-      .\b2 -j4 address-model=32 variant=${{ parameters.variant }} --layout=system --with-filesystem --with-system --with-test stage
+      .\b2 -j4 address-model=32 variant=${{ parameters.variant }} --layout=system --with-filesystem stage
       dir stage\lib
     displayName: 'Install Boost on Windows'
     condition: eq(variables['Agent.OS'], 'Windows_NT')
