Add from_matrix tests

--- a/test/extension/blaze/CMakeLists.txt
+++ b/test/extension/blaze/CMakeLists.txt
@@ -10,7 +10,7 @@ foreach(_name
   to_matrix
   pixel_to_vector
   vector_to_pixel
-  to_image)
+  from_matrix)
   set(_test t_ext_blaze_${_name})
   set(_target test_ext_blaze_${_name})
 
