Add heat conservation test

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -34,7 +34,8 @@ foreach(_name
   hessian
   box_filter
   median_filter
-  sobel_scharr)
+  sobel_scharr
+  anisotropic_diffusion)
   set(_test t_core_image_processing_${_name})
   set(_target test_core_image_processing_${_name})
 
