--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -7,7 +7,7 @@
     { "BuildDir": "${workspaceRoot}\\_build" },
     { "InstallDir": "${workspaceRoot}\\_install" },
     { "DEFAULT_BUILD_TESTING": "OFF" },
-    { "DEFAULT_Boost_ADDITIONAL_VERSIONS": "1.73;1.72;1.71" },
+    { "DEFAULT_Boost_ADDITIONAL_VERSIONS": "1.74;1.73;1.72;1.71" },
     { "DEFAULT_Boost_COMPILER": "-vc142;-vc141" },
     { "DEFAULT_Boost_DEBUG": "ON" },
     { "DEFAULT_GIL_BUILD_EXAMPLES": "ON" },
