--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -40,3 +40,4 @@ add_subdirectory(image_view)
 add_subdirectory(algorithm)
 add_subdirectory(image_processing)
 add_subdirectory(histogram)
+add_subdirectory(rasterization)
