Broke distance test

--- a/test/core/rasterization/CMakeLists.txt
+++ b/test/core/rasterization/CMakeLists.txt
@@ -7,7 +7,8 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(_name
-    line)
+    line
+    circle)
     set(_test t_core_rasterization_${_name})
     set(_target test_core_rasterization_${_name})
 
