Add include guards, stylistic changes

--- a/test/core/rasterization/CMakeLists.txt
+++ b/test/core/rasterization/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Boost.GIL (Generic Image Library) - tests
 #
-# Copyright 2019 Miral Shah <miralshah2211@gmail.com>
+# Copyright 2020 Olzhas Zhumabek <anonymous.from.applecity@gmail.com>
 #
 # Use, modification and distribution are subject to the Boost Software License,
 # Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at
