--- a/bench/opencv/CMakeLists.txt
+++ b/bench/opencv/CMakeLists.txt
@@ -4,28 +4,30 @@
 # License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at
 # http://www.boost.org/LICENSE_1_0.txt)
 
-add_executable(bench_rotation
+add_executable(bench_ocv_rotation
   bench_rotation.cpp
 )
 
-target_link_libraries(bench_rotation
+target_link_libraries(bench_ocv_rotation
     benchmark::benchmark
     ${OpenCV_LIBS}
 )
 
-target_include_directories(bench_rotation
-    ${OpenCV_INCLUDE_DIRS}
+message(${OpenCV_INCLUDE_DIRS})
+
+target_include_directories(bench_ocv_rotation
+    PRIVATE ${OpenCV_INCLUDE_DIRS}
 )
 
-add_executable(bench_flip
+add_executable(bench_ocv_flip
   bench_flip.cpp
 )
 
-target_link_libraries(bench_flip
+target_link_libraries(bench_ocv_flip
     benchmark::benchmark
     ${OpenCV_LIBS}
 )
 
-target_include_directories(bench_flip
-    ${OpenCV_INCLUDE_DIRS}
+target_include_directories(bench_ocv_flip
+    PRIVATE ${OpenCV_INCLUDE_DIRS}
 )
